# django-rest-framework

./: .env.example  .flake8  .isort.cfg  Dockerfile  README.md  coverage.txt  docker-compose.prod.yml  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: settings.py  urls.py
courses/: serializers.py
courses/management/commands/: fill_courses_lessons.py
education/: admin.py  apps.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
education/management/commands/: create_moderators_group.py  fill_courses_lessons.py
education/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0002_initial.py  0003_alter_course_owner_alter_lesson_owner.py  0003_course_price_lesson_price.py  0004_subscription.py  0005_alter_course_options_alter_lesson_options_and_more.py
payments/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
payments/management/commands/: fill_payments.py
payments/migrations/: 0001_initial.py  0002_initial.py  0003_alter_payment_payment_url.py  0004_alter_payment_payment_url.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: fill_payments.py  fill_users.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payment.py  0004_alter_user_managers.py
