[project]
name = "project1"
version = "0.1.0"
description = ""
authors = [
    {name = "Semyon Shtelman", email = "shtelmaan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=6.0.5,<7.0.0"
pillow = ">=12.2.0,<13.0.0"
psycopg2-binary = ">=2.9.12,<3.0.0"
djangorestframework = ">=3.17.1,<4.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
django-filter = ">=25.2,<26.0"
djangorestframework-simplejwt = ">=5.5.1,<6.0.0"
coverage = ">=7.14.0,<8.0.0"
drf-yasg = ">=1.21.15,<2.0.0"
stripe = ">=15.2.0,<16.0.0"
celery = ">=5.6.3,<6.0.0"
django-redis = "^6.0.0"

[tool.poetry]
package-mode = false

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^26.3.1"
isort = "^8.0.1"